Fix tests on Windows